# bitcoin-ipc

./: .gitignore  Cargo.toml  README.md  build.rs
schema/: chain.capnp  common.capnp  echo.capnp  handler.capnp  init.capnp  mining.capnp  node.capnp  proxy.capnp  wallet.capnp
src/: chain.rs  clients.rs  init.rs  lib.rs  node.rs  spawner.rs  tasks.rs  wallet.rs
