[package]
name = "bitcoin-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.19.3"
capnp-rpc = "0.19.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "net", "process", "full"] }
tokio-util = { version = "0.7.10", features = ["full"] }

[build-dependencies]
capnpc = "0.19.0"
